--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.1",
     "nunjucks": "^3.2.0",
     "pg": "^7.10.0",
-    "sequelize": "^5.8.0"
+    "sequelize": "^5.8.0",
+    "session-file-store": "^1.2.0"
   }
 }
