--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.18.11",
+    "nodemon": "^1.19.0",
     "sequelize-cli": "^5.4.0"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "connect-loki": "^1.1.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "moment": "^2.24.0",
     "multer": "^1.4.1",
     "nunjucks": "^3.2.0",
     "pg": "^7.10.0",
